Changed configure.ac to incorporate Nelson Beebe's suggestion for getting mode_t on IBM AIX.

--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ dnl Checks for programs.
 #AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_CPP
+dnl This produces a warning.  See http://mail.gnu.org/pipermail/bug-automake/2001-August/000213.html
 AM_PROG_LEX
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
@@ -77,6 +78,26 @@ dnl AC_FUNC_VFORK
 dnl AC_FUNC_VPRINTF
 dnl AC_FUNC_WAIT3
 dnl AC_CHECK_FUNCS([alarm atexit btowc bzero dup2 endgrent endpwent fchdir floor ftruncate getcwd getgroups gethostname gettimeofday isascii iswprint lchown localeconv mblen mbrlen mbrtowc memchr memmove memset mkdir mkfifo modf munmap pathconf pow putenv realpath regcomp rint rmdir rpmatch select setenv socket sqrt strcasecmp strchr strcspn strdup strerror strftime strncasecmp strpbrk strrchr strspn strstr strtod strtol strtoul strtoull tzset uname utime vprintf])
+
+dnl This was provided by Nelson Beebe for dealing with problems on IBM
+dnl AIX 4.3 with defining mode_t.
+
+dnl Checks for _ALL_SOURCE (IBM RS/6000 c89 needs this)
+AC_MSG_CHECKING(whether we need _ALL_SOURCE to expose mode_t)
+all=no
+AC_TRY_COMPILE([
+#include <stdio.h>
+mode_t x;
+], , , all=maybe)
+if test $all = maybe ; then
+AC_TRY_COMPILE([
+#define _ALL_SOURCE
+#include <stdio.h>
+mode_t x;
+], , AC_DEFINE(_ALL_SOURCE) all=yes)
+fi
+if test $all = maybe ; then all=no ; fi
+AC_MSG_RESULT($all)
 
 LCLOBJ='$(lcl_OBJECTS)'
 AC_ARG_WITH([lcl],
