Changed checking of complete descruction so +strictdestroy is no necessary for struct fields.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,7 +4,9 @@
 AUTOMAKE_OPTIONS = 1.5 foreign
 
 ## Use this to configure diff output
-DIFFFLAGS = -u
+DIFFFLAGS = 
+
+# -u show context
 
 ## Set up the splint commands
 
