Added manual test cases. Updated to ISO C99 limits (option to still select ANSI 89).

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -126,10 +126,11 @@ UNITTESTS = \
 
 UNITEXPECTS = $(addsuffix .expect, $(UNITTESTS))
 
+
 ### warnuse doesn't work yet!
 SUBDIRTESTS = metastate mergestate tainted fileio \
    simplebufferConstraintTests moreBufferTests moreBufferTests2 globalbufferannotation \
-   maxset strchr for \
+   maxset strchr for manual\
 tests2.2 tests2.4 tests2.5 db1 db2 db3
 
 SPLINTTESTS = $(UNITTESTS) $(SUBDIRTESTS)
@@ -1141,7 +1142,7 @@ exports:
 .PHONY: external
 external:
 	-$(SPLINTR) external.c +partial
-	-$(SPLINTR) external.c +partial +distinctexternalnames -expect 2
+	-$(SPLINTR) external.c +partial +distinctexternalnames +ansi89limits -expect 2
 	-$(SPLINTR) external.c -nolib +partial -externalnamelength 3 -expect 3
 	-$(SPLINTR) external.c -nolib +partial -externalnamelength 3 +externalnamecaseinsensitive -expect 3
 	-$(SPLINTR) external.c +partial -externalnamelength 3 -expect 4
@@ -1223,7 +1224,8 @@ inparam:
 .PHONY: internal
 internal:
 	-$(SPLINTR) internal.c -expect 1
-	-$(SPLINTR) internal.c +distinctinternalnames -expect 2
+	-$(SPLINTR) internal.c +distinctinternalnames -expect 1
+	-$(SPLINTR) internal.c +distinctinternalnames +ansi89limits -expect 2
 	-$(SPLINTR) internal.c -internalnamelen 28 -expect 3
 	-$(SPLINTR) internal.c +internalnamecaseinsensitive -expect 3
 	-$(SPLINTR) internal.c +internalnamecaseinsensitive +internalnamelookalike -expect 11
