Cleaned up flags to generate manual help.
Renamed arraybounds and arrayboundsread to boundswrite and boundsread

Replaced +control flag with duplicatecases, alwaysexits, emptyreturn and
macroreturn (all plain, default +)

Split

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -1074,7 +1074,7 @@ compdestroy:
 
 .PHONY: constannot
 constannot:
-	${SPLINTRN} constannot.c +arraybounds  -exportlocal -expect 2
+	${SPLINTRN} constannot.c +boundswrite -exportlocal -expect 2
 
 .PHONY: csyntax
 csyntax:
@@ -1319,7 +1319,7 @@ mongoincludes:
 
 .PHONY: mystrncat
 mystrncat:
-	-$(SPLINTR) mystrncat.c +arraybounds  +arrayboundsread -expect 4 
+	-$(SPLINTR) mystrncat.c +boundsread +boundswrite -expect 4 
 
 .PHONY: noeffect
 noeffect:
@@ -1624,11 +1624,11 @@ freearray:
 
 .PHONY: sizeof
 sizeof:
-	-$(SPLINTR) +arraybounds +arrayboundsread sizeof.c -expect 1
+	-$(SPLINTR) +bounds sizeof.c -expect 1
 
 .PHONY: buffertest
 buffertest:
-	-$(SPLINTR) +arraybounds +arrayboundsread buffertest1.c -expect 5
+	-$(SPLINTR) +bounds buffertest1.c -expect 5
 
 .PHONY: $(SUBDIRTESTS)
 $(SUBDIRTESTS):
