--- a/test/globalbufferannotation/Makefile
+++ b/test/globalbufferannotation/Makefile
@@ -3,5 +3,5 @@
 SPLINT = splint -exportlocal
  
 check:
-	$(SPLINT) +arraybounds +arrayboundsread globalvariable.c
+	$(SPLINT) +bounds globalvariable.c
 
