--- a/test/simplebufferConstraintTests/Makefile
+++ b/test/simplebufferConstraintTests/Makefile
@@ -3,6 +3,6 @@
 SPLINT = splint -exportlocal
  
 check:
-	$(SPLINT) +arraybounds +arrayboundsread m.c sizeof.c test3.c test7.c -expect 7
+	$(SPLINT) +bounds m.c sizeof.c test3.c test7.c -expect 7
 
 
