--- a/test/moreBufferTests/Makefile
+++ b/test/moreBufferTests/Makefile
@@ -3,5 +3,5 @@
 SPLINT = splint
  
 check:
-	$(SPLINT) -exportlocal +arraybounds +arrayboundsread unrecogCall.c strrchr.c initialization.c simplifyTest.c strncatNotReallyGood.c strncatReallyGood.c -expect 8
+	$(SPLINT) -exportlocal +bounds unrecogCall.c strrchr.c initialization.c simplifyTest.c strncatNotReallyGood.c strncatReallyGood.c -expect 8
 
