--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1035,7 +1035,7 @@ nocheck:
 
 .PHONY: test
 test:
-	cd ../test; ${MAKE} --no-print-directory
+	${MAKE} ; cd ../test; ${MAKE} --no-print-directory
 
 ### Automake generates wrong tags
 .PHONY: etags
