Fixed problems in library headers. Remove splint generated files.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -85,12 +85,14 @@ AUTOMAKE_OPTIONS = 1.5 foreign
 
 splintlibdir = $(pkgdatadir)/lib
 
+UnixHeaders = stdio.h stdlib.h
+
 splintlib_DATA = \
   ansi.h ansi.lcd ansistrict.lcd posix.h posix.lcd posixstrict.lcd \
   unix.h unix.lcd unixstrict.lcd CTrait.syms CTraitGen.lcl bool.h \
   file.mts file.xh filerw.mts filerw.xh \
   lclinit.lci linux.h lslinit.lsi tainted.mts tainted.xh \
-  stdio.h stdlib.h
+  stdio.h stdlib.h $(UnixHeaders)
 
 
 EXTRA_DIST = $(splintlib_DATA)
@@ -253,12 +255,12 @@ posixstrict.lcd: ansi.h posix.h $(SPLINT)
 	-$(SPLINT) -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
 	@touch $@
 
-unix.lcd: ansi.h posix.h unix.h $(SPLINT)
-	-$(SPLINT) -nolib +impconj ansi.h posix.h unix.h stdio.h stdlib.h -dump unix
+unix.lcd: ansi.h posix.h unix.h $(UnixHeaders) $(SPLINT)
+	-$(SPLINT) -incondefs -nolib +impconj ansi.h posix.h unix.h stdio.h stdlib.h -dump unix
 	@touch $@
 
-unixstrict.lcd: ansi.h posix.h unix.h $(SPLINT)
-	-$(SPLINT) -nolib +impconj -DSTRICT ansi.h posix.h unix.h  stdio.h stdlib.h  -dump unixstrict
+unixstrict.lcd: ansi.h posix.h unix.h $(UnixHeaders) $(SPLINT)
+	-$(SPLINT) -incondefs -nolib +impconj -DSTRICT ansi.h posix.h unix.h  stdio.h stdlib.h  -dump unixstrict
 	@touch $@
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
